--- a/OsmAnd/res/xml/navigation_settings.xml
+++ b/OsmAnd/res/xml/navigation_settings.xml
@@ -74,9 +74,11 @@
 
     <PreferenceCategory
         android:key="turn_screen_on"
-        android:layout="@layout/preference_category_summary"
-        android:summary="@string/wake_on_voice_descr"
         android:title="@string/wake_on_voice">
+
+        <Preference
+            android:selectable="false"
+            android:summary="@string/wake_on_voice_descr" />
 
         <ListPreference
             android:key="turn_screen_on_time_int"
