add menu on save current track 2/2 add utility method to insert styled substring.

--- a/OsmAnd/res/layout/fragment_on_save_current_track.xml
+++ b/OsmAnd/res/layout/fragment_on_save_current_track.xml
@@ -21,19 +21,20 @@
 		android:orientation="horizontal"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:paddingBottom="12dp">
+		android:paddingBottom="@dimen/content_padding_small">
 
 		<Button
 			android:id="@+id/open_track_button"
 			android:background="?attr/dlg_btn_secondary"
 			android:layout_width="0dp"
-			android:layout_height="@dimen/bottom_sheet_cancel_button_height"
+			android:layout_height="@dimen/bottom_sheet_cancel_button_height_small"
 			android:layout_weight="1"
-			android:text="Open track"
+			android:text="@string/shared_string_open_track"
 			android:textColor="?attr/dlg_btn_secondary_text"
 			android:textSize="@dimen/default_desc_text_size"
-			android:layout_marginLeft="16dp"
-			android:layout_marginRight="8dp"
+			android:textAllCaps="false"
+			android:layout_marginLeft="@dimen/bottom_sheet_content_margin"
+			android:layout_marginRight="@dimen/bottom_sheet_content_margin_small"
 
 			/>
 
@@ -41,14 +42,14 @@
 			android:id="@+id/show_on_map_button"
 			android:background="?attr/dlg_btn_primary"
 			android:layout_width="0dp"
-			android:layout_height="@dimen/bottom_sheet_cancel_button_height"
+			android:layout_height="@dimen/bottom_sheet_cancel_button_height_small"
 			android:layout_weight="1"
-			android:text="Show on the map"
-			android:textAllCaps="true"
+			android:text="@string/shared_string_show_on_map"
+			android:textAllCaps="false"
 			android:textColor="?attr/dlg_btn_primary_text"
 			android:textSize="@dimen/default_desc_text_size"
-			android:layout_marginLeft="8dp"
-			android:layout_marginRight="16dp"
+			android:layout_marginLeft="@dimen/bottom_sheet_content_margin_small"
+			android:layout_marginRight="@dimen/bottom_sheet_content_margin"
 			/>
 
 	</LinearLayout>
