--- a/OsmAnd/res/values/styles.xml
+++ b/OsmAnd/res/values/styles.xml
@@ -259,6 +259,12 @@
         <item name="profile_save_btn">@drawable/btn_round_profile_blue</item>
         <item name="profile_cancel_btn">@drawable/btn_round_profile_gray</item>
         <item name="android:textColor">@color/text_color_primary_light</item>
+
+        <item name="buttonBarNegativeButtonStyle">@style/DialogButtonStyleLight</item>
+        <item name="buttonBarPositiveButtonStyle">@style/DialogButtonStyleLight</item>
+        <item name="buttonBarNeutralButtonStyle">@style/DialogButtonStyleLight</item>
+        <item name="colorBackgroundFloating">@color/list_background_color_light</item>
+        <item name="android:colorBackgroundFloating">@color/list_background_color_light</item>
     </style>
 
     <style name="OverflowMenuButton" parent="@style/Widget.AppCompat.ActionButton.Overflow">
@@ -506,6 +512,12 @@
         <item name="profile_save_btn">@drawable/btn_round_profile_night</item>
         <item name="profile_cancel_btn">@drawable/btn_round_profile_gray_n</item>
         <item name="android:textColor">@color/text_color_primary_dark</item>
+
+        <item name="buttonBarNegativeButtonStyle">@style/DialogButtonStyleDark</item>
+        <item name="buttonBarPositiveButtonStyle">@style/DialogButtonStyleDark</item>
+        <item name="buttonBarNeutralButtonStyle">@style/DialogButtonStyleDark</item>
+        <item name="colorBackgroundFloating">@color/list_background_color_dark</item>
+        <item name="android:colorBackgroundFloating">@color/list_background_color_dark</item>
     </style>
 
     <style name="FreeVersionBanner" parent="OsmandDarkTheme">
@@ -518,6 +530,14 @@
 
     <style name="Theme.AppCompat.Light.Dialog.Alert.NoAnimation">
         <item name="android:windowAnimationStyle">@null</item>
+    </style>
+
+    <style name="DialogButtonStyleLight" parent="Widget.AppCompat.Button.ButtonBar.AlertDialog">
+        <item name="android:textColor">@color/active_color_primary_light</item>
+    </style>
+
+    <style name="DialogButtonStyleDark" parent="Widget.AppCompat.Button.ButtonBar.AlertDialog">
+        <item name="android:textColor">@color/active_color_primary_dark</item>
     </style>
 
     <!-- Standard action bar override -->
