--- a/OsmAnd/res/layout/gpx_item_list_header.xml
+++ b/OsmAnd/res/layout/gpx_item_list_header.xml
@@ -97,6 +97,51 @@
             android:background="?attr/dashboard_divider"/>
 
         <LinearLayout
+            android:id="@+id/calculate_distance_between_segments_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:minHeight="48dp"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingStart="16dp"
+                android:paddingLeft="16dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/calculate_distance_between_segments"
+                    android:textColor="?android:textColorPrimary"
+                    android:textSize="@dimen/default_list_text_size" />
+
+                <android.support.v7.widget.SwitchCompat
+                    android:id="@+id/calculate_distance_between_segments"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="16dp"
+                    android:paddingLeft="16dp"
+                    android:paddingEnd="8dp"
+                    android:paddingRight="8dp" />
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:background="?attr/dashboard_divider" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/split_color_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
