--- a/OsmAnd/res/layout/gpx_item_altitude.xml
+++ b/OsmAnd/res/layout/gpx_item_altitude.xml
@@ -22,6 +22,7 @@
             android:id="@+id/gpx_join_gaps_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackground"
             android:minHeight="@dimen/card_row_min_height"
             android:orientation="horizontal">
 
