--- a/OsmAnd/res/layout/gpx_item_altitude.xml
+++ b/OsmAnd/res/layout/gpx_item_altitude.xml
@@ -43,6 +43,10 @@
                 android:id="@+id/gpx_join_gaps_switch"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:background="@null"
+                android:clickable="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 android:paddingLeft="@dimen/content_padding"
                 android:paddingRight="@dimen/content_padding" />
 
