--- a/OsmAnd/res/layout/fragment_map_markers_dialog.xml
+++ b/OsmAnd/res/layout/fragment_map_markers_dialog.xml
@@ -35,6 +35,7 @@
 						android:layout_height="wrap_content">
 
 						<net.osmand.plus.widgets.TextViewEx
+							android:id="@+id/map_markers_toolbar_title"
 							android:layout_width="0dp"
 							android:layout_height="match_parent"
 							android:layout_weight="1"
