--- a/OsmAnd/res/values/styles.xml
+++ b/OsmAnd/res/values/styles.xml
@@ -184,7 +184,7 @@
         <item name="actionOverflowButtonStyle">@style/OverflowMenuButton</item>
 
         <item name="circle_dialog_bg">@drawable/circle_dialog_bg_light</item>
-
+        <item name="textColorAlertDialogListItem">@color/text_color_primary_light</item>
         <item name="secondary_icon_color">@color/icon_color_secondary_light</item>
         <item name="default_icon_color">@color/icon_color_default_light</item>
         <item name="primary_icon_color">@color/icon_color_primary_light</item>
@@ -288,6 +288,10 @@
 
     <style name="OsmandLightTheme.NoActionbar.Preferences">
         <item name="android:textColorSecondary">@color/text_color_secondary_light</item>
+        <item name="android:listDivider">@color/divider_color_light</item>
+        <item name="android:dividerHeight">1dp</item>
+        <!--<item name="colorControlNormal">@color/icon_color_secondary_light</item>-->
+        <!--<item name="colorControlActivated">@color/active_color_primary_light</item>-->
     </style>
 
     <style name="OsmandLightTheme.DarkActionbar">
@@ -356,10 +360,15 @@
 
     <style name="OsmandDarkTheme.NoActionbar.Preferences">
         <item name="android:textColorSecondary">@color/text_color_secondary_dark</item>
+        <item name="android:listDivider">@color/divider_color_dark</item>
+        <item name="android:dividerHeight">1dp</item>
+        <!--<item name="colorControlNormal">@color/icon_color_secondary_dark</item>-->
+        <!--<item name="colorControlActivated">@color/active_color_primary_dark</item>-->
     </style>
 
     <style name="OsmandDarkTheme.NoAnimation">
         <item name="alertDialogTheme">@style/Theme.AppCompat.Dialog.Alert.NoAnimation</item>
+        <item name="dialog_title_color">@color/marker_red</item>
     </style>
 
     <style name="OsmandLightTheme.NoAnimation">
@@ -461,6 +470,7 @@
         <item name="subscription_active_div_color">@color/subscription_active_div_color_dark</item>
 
         <item name="circle_dialog_bg">@drawable/circle_dialog_bg_night</item>
+        <item name="textColorAlertDialogListItem">@color/text_color_primary_dark</item>
         <item name="dialog_bg_color">@color/activity_background_color_dark</item>
         <item name="dialog_transparent_bg_color">@color/activity_background_transparent_color_dark</item>
         <item name="dialog_title_color">@color/text_color_primary_dark</item>
@@ -543,7 +553,10 @@
     <!-- Standard action bar override -->
     <style name="Widget.Styled.ActionBarDark" parent="Widget.AppCompat.Light.ActionBar.Solid.Inverse">
         <item name="background">@color/app_bar_color_dark</item>
+        <item name="titleTextStyle">@style/Widget.Styled.DarkActionBarTitle</item>
+
         <item name="android:background">@color/app_bar_color_dark</item>
+        <item name="android:titleTextStyle">@style/Widget.Styled.DarkActionBarTitle</item>
         <item name="elevation">0dp</item>
     </style>
 
@@ -562,6 +575,10 @@
 
     <style name="Widget.Styled.LightActionBarTitle" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
         <item name="android:textColor">@color/color_white</item>
+    </style>
+
+    <style name="Widget.Styled.DarkActionBarTitle" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/text_color_primary_dark</item>
     </style>
 
     <style name="Widget.Styled.LightActionBarSubtitle" parent="TextAppearance.AppCompat.Widget.ActionBar.Subtitle">
@@ -722,9 +739,9 @@
     </style>
 
     <style name="WhiteControls" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorControlNormal">@color/color_white</item>
-        <item name="colorControlActivated">@color/color_white</item>
-        <item name="colorControlHighlight">@color/color_white</item>
+        <item name="colorControlNormal">?attr/wikivoyage_primary_btn_text_color</item>
+        <item name="colorControlActivated">?attr/wikivoyage_primary_btn_text_color</item>
+        <item name="colorControlHighlight">?attr/wikivoyage_primary_btn_text_color</item>
 
     </style>
 </resources>
