--- a/OsmAnd/res/layout/quick_action_create_edit_dialog.xml
+++ b/OsmAnd/res/layout/quick_action_create_edit_dialog.xml
@@ -41,20 +41,20 @@
         android:focusableInTouchMode="true"
         android:background="?attr/actionModeBackground">
 
-        <ImageView
+        <android.support.v7.widget.AppCompatImageView
             android:id="@+id/image"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="16dp"
             android:scaleType="centerInside"
-            android:tint="?attr/wikivoyage_primary_btn_text_color"
+            app:tint="?attr/app_bar_primary_item_color"
             android:layout_marginTop="24dp"
             android:src="@drawable/ic_action_flag_dark" />
 
         <android.support.v7.widget.AppCompatEditText
             android:id="@+id/name"
-            android:theme="@style/WhiteControls"
+            android:theme="@style/AppBarControls"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
