--- a/OsmAnd/res/values/attrs.xml
+++ b/OsmAnd/res/values/attrs.xml
@@ -57,6 +57,7 @@
         <attr name="search_tabbar_layout_theme" format="reference"/>
         <attr name="toolbar_theme" format="reference"/>
         <attr name="new_app_theme" format="reference"/>
+	    <attr name="app_bar_primary_item_color" format="color"/>
 
         <attr name="divider_color" format="reference" />
         <attr name="contextMenuButtonColor" format="reference" />
