#15459: UI fixes; fixed saving only one sensor to track

--- a/OsmAnd/res/layout/fragment_ant_plus_sensors_list.xml
+++ b/OsmAnd/res/layout/fragment_ant_plus_sensors_list.xml
@@ -4,7 +4,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="?attr/bg_color"
-	android:fitsSystemWindows="true">
+	android:fitsSystemWindows="false">
 
 	<com.google.android.material.appbar.AppBarLayout
 		android:id="@+id/appbar"
