--- a/OsmAnd/res/layout/item_external_device.xml
+++ b/OsmAnd/res/layout/item_external_device.xml
@@ -78,7 +78,8 @@
 					android:layout_width="@dimen/icon_size_double"
 					android:layout_height="@dimen/icon_size_double"
 					android:layout_gravity="center_vertical"
-					android:layout_marginHorizontal="@dimen/content_padding"
+					android:layout_marginHorizontal="@dimen/text_margin_small"
+					android:contentDescription="@string/shared_string_menu"
 					android:scaleType="center"
 					android:src="@drawable/ic_overflow_menu_white"
 					android:tint="?attr/secondary_icon_color"
