--- a/OsmAnd/res/layout/bottom_sheet_item_title.xml
+++ b/OsmAnd/res/layout/bottom_sheet_item_title.xml
@@ -10,12 +10,8 @@
 	android:gravity="center_vertical"
 	android:maxLines="5"
 	android:minHeight="@dimen/bottom_sheet_title_height"
-	android:paddingLeft="@dimen/content_padding"
-	android:paddingRight="@dimen/content_padding"
-	android:paddingTop="@dimen/content_padding_small"
-	android:paddingBottom="@dimen/content_padding_small"
+	android:paddingHorizontal="@dimen/content_padding"
+	android:paddingVertical="@dimen/content_padding_small"
 	android:textAppearance="@style/TextAppearance.ListItemTitle"
 	osmand:typeface="@string/font_roboto_medium"
-	tools:text="Some Title"
-	android:paddingStart="@dimen/content_padding"
-	android:paddingEnd="@dimen/content_padding" />
+	tools:text="Some Title" />
