--- a/OsmAnd/res/layout/fragment_ant_plus_search.xml
+++ b/OsmAnd/res/layout/fragment_ant_plus_search.xml
@@ -111,7 +111,7 @@
 				android:paddingStart="@dimen/content_padding_small"
 				android:paddingEnd="@dimen/content_padding_small"
 				android:text="@string/ant_plus_searching_text_description"
-				android:textColor="?android:textColor"
+				android:textColor="?android:textColorSecondary"
 				android:textSize="@dimen/default_desc_text_size"
 				osmand:layout_constraintLeft_toLeftOf="parent"
 				osmand:layout_constraintRight_toRightOf="parent"
@@ -170,7 +170,7 @@
 				android:gravity="center"
 				android:lineSpacingExtra="5sp"
 				android:text="@string/ant_plus_nothing_found_description"
-				android:textColor="?android:textColor"
+				android:textColor="?android:textColorSecondary"
 				android:textSize="@dimen/default_desc_text_size"
 				osmand:layout_constraintLeft_toLeftOf="parent"
 				osmand:layout_constraintRight_toRightOf="parent"
