--- a/OsmAnd/res/layout/no_bluetooth_view.xml
+++ b/OsmAnd/res/layout/no_bluetooth_view.xml
@@ -42,12 +42,12 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="@dimen/content_padding_small"
-		android:layout_marginTop="@dimen/content_padding_small"
+		android:layout_marginTop="@dimen/content_padding_half"
 		android:layout_marginEnd="@dimen/content_padding_small"
 		android:gravity="center_horizontal"
 		android:lineSpacingExtra="5sp"
 		android:text="@string/ant_plus_bluetooth_off_description"
-		android:textColor="?android:textColorSecondary"
+		android:textColor="?android:attr/textColorSecondary"
 		android:textSize="@dimen/default_desc_text_size"
 		osmand:layout_constraintLeft_toLeftOf="parent"
 		osmand:layout_constraintRight_toRightOf="parent"
