--- a/OsmAnd/res/layout/fragment_external_device_details.xml
+++ b/OsmAnd/res/layout/fragment_external_device_details.xml
@@ -19,7 +19,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_marginBottom="@dimen/content_padding_small"
-			android:background="?attr/card_and_list_background_basic"
+			android:background="?attr/appbar_and_list_background_color"
 			android:elevation="2dp"
 			android:orientation="vertical">
 
@@ -119,14 +119,16 @@
 						tools:text="Pair"
 						tools:visibility="gone" />
 
-					<ProgressBar
+					<me.zhanghai.android.materialprogressbar.MaterialProgressBar
 						android:id="@+id/progress_bar"
-						style="?android:attr/progressBarStyleHorizontal"
+						style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
 						android:layout_width="120dp"
 						android:layout_height="4dp"
 						android:layout_gravity="center"
 						android:indeterminate="true"
 						android:visibility="gone"
+						osmand:mpb_progressStyle="horizontal"
+						osmand:mpb_useIntrinsicPadding="false"
 						tools:visibility="visible" />
 
 				</FrameLayout>
@@ -138,7 +140,7 @@
 			android:layout_height="wrap_content"
 			android:layout_marginTop="@dimen/content_padding_small"
 			android:layout_marginBottom="@dimen/content_padding_small"
-			android:background="?attr/card_and_list_background_basic"
+			android:background="?attr/list_background_color"
 			android:elevation="2dp"
 			android:orientation="vertical">
 
@@ -171,13 +173,18 @@
 					android:layout_height="wrap_content"
 					android:gravity="center_vertical|right"
 					android:lineSpacingExtra="5sp"
+					android:textColor="?android:textColorSecondary"
 					android:padding="@dimen/content_padding"
 					android:text="-"
 					android:textSize="@dimen/default_list_text_size" />
 
 			</LinearLayout>
 
-			<include layout="@layout/divider" />
+			<include
+				layout="@layout/divider"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginLeft="@dimen/content_padding" />
 
 			<LinearLayout
 				android:layout_width="match_parent"
@@ -199,6 +206,7 @@
 					android:layout_height="wrap_content"
 					android:gravity="center_vertical|right"
 					android:lineSpacingExtra="5sp"
+					android:textColor="?android:textColorSecondary"
 					android:padding="@dimen/content_padding"
 					android:text="-"
 					android:textSize="@dimen/default_list_text_size" />
@@ -211,7 +219,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="@dimen/content_padding_small"
-			android:background="?attr/card_and_list_background_basic"
+			android:background="?attr/list_background_color"
 			android:elevation="2dp"
 			android:orientation="vertical">
 
