--- a/OsmAnd/res/layout/no_bluetooth_view.xml
+++ b/OsmAnd/res/layout/no_bluetooth_view.xml
@@ -1,29 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:osmand="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:id="@+id/state_no_bluetooth"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="vertical"
 	android:paddingLeft="@dimen/content_padding_small"
 	android:paddingRight="@dimen/content_padding_small"
-	android:visibility="gone">
+	android:visibility="gone"
+	tools:visibility="visible">
 
 	<androidx.appcompat.widget.AppCompatImageView
 		android:layout_width="48dp"
 		android:layout_height="48dp"
+		android:layout_above="@+id/no_bluetooth_text"
 		android:layout_centerHorizontal="true"
 		android:layout_marginBottom="@dimen/horizontal_divider_height"
 		android:src="@drawable/ic_action_bluetooth_disabled"
-		android:tint="?attr/default_icon_color"
-		osmand:layout_constraintBottom_toTopOf="@+id/no_bluetooth_text"
-		osmand:layout_constraintLeft_toLeftOf="parent"
-		osmand:layout_constraintRight_toRightOf="parent" />
+		android:tint="?attr/default_icon_color" />
 
 	<TextView
 		android:id="@+id/no_bluetooth_text"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_centerHorizontal="true"
+		android:layout_gravity="center_horizontal|top"
 		android:layout_marginStart="@dimen/content_padding"
 		android:layout_marginTop="@dimen/external_devices_empty_content_centre_margin"
 		android:layout_marginEnd="@dimen/content_padding"
@@ -32,15 +34,14 @@
 		android:textColor="?android:textColor"
 		android:textSize="@dimen/default_list_text_size"
 		android:textStyle="bold"
-		osmand:layout_constraintLeft_toLeftOf="parent"
-		osmand:layout_constraintRight_toRightOf="parent"
-		osmand:layout_constraintTop_toTopOf="parent"
 		osmand:typeface="@string/font_roboto_medium" />
 
 	<TextView
 		android:id="@+id/no_bluetooth_description"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_below="@+id/no_bluetooth_text"
+		android:layout_centerHorizontal="true"
 		android:layout_marginStart="@dimen/content_padding_small"
 		android:layout_marginTop="@dimen/content_padding_half"
 		android:layout_marginEnd="@dimen/content_padding_small"
@@ -49,9 +50,6 @@
 		android:text="@string/ant_plus_bluetooth_off_description"
 		android:textColor="?android:attr/textColorSecondary"
 		android:textSize="@dimen/default_desc_text_size"
-		osmand:layout_constraintLeft_toLeftOf="parent"
-		osmand:layout_constraintRight_toRightOf="parent"
-		osmand:layout_constraintTop_toBottomOf="@+id/no_bluetooth_text"
 		osmand:typeface="@string/font_roboto_medium" />
 
 	<include
@@ -59,9 +57,8 @@
 		layout="@layout/bottom_buttons"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="@dimen/content_padding"
-		osmand:layout_constraintLeft_toLeftOf="parent"
-		osmand:layout_constraintRight_toRightOf="parent"
-		osmand:layout_constraintTop_toBottomOf="@+id/no_bluetooth_description" />
+		android:layout_below="@+id/no_bluetooth_description"
+		android:layout_gravity="center_horizontal"
+		android:layout_marginTop="@dimen/content_padding" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
