--- a/OsmAnd/res/layout/list_item_icon_and_menu.xml
+++ b/OsmAnd/res/layout/list_item_icon_and_menu.xml
@@ -54,6 +54,16 @@
         </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/pro_icon"
+            android:layout_width="70dp"
+            android:layout_height="32dp"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="@dimen/content_padding"
+            tools:src="@drawable/img_button_pro_night"
+            android:visibility="gone"
+            tools:visibility="visible"/>
+
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/secondary_icon"
             android:layout_width="@dimen/standard_icon_size"
             android:layout_height="@dimen/standard_icon_size"
