--- a/OsmAnd/res/layout/list_item_terrain_description.xml
+++ b/OsmAnd/res/layout/list_item_terrain_description.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:osmand="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
+	android:layout_height="wrap_content"
 	android:background="?attr/bg_color"
 	android:orientation="vertical">
 
@@ -34,7 +34,6 @@
 				android:layout_gravity="center_vertical"
 				android:layout_marginStart="@dimen/content_padding"
 				android:layout_marginLeft="@dimen/content_padding"
-				android:layout_weight="0"
 				android:src="@drawable/ic_action_srtm_colored_day" />
 
 		</LinearLayout>
