--- a/OsmAnd/res/layout/terrain_visibility_fragment.xml
+++ b/OsmAnd/res/layout/terrain_visibility_fragment.xml
@@ -8,6 +8,7 @@
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:layout_marginHorizontal="@dimen/content_padding"
 		android:orientation="horizontal">
 
 		<TextView
@@ -31,6 +32,7 @@
 		android:id="@+id/transparency_slider"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:layout_marginHorizontal="@dimen/content_padding"
 		android:stepSize="1" />
 
 </LinearLayout>
