--- a/OsmAnd/res/layout/terrain_zoom_levels_fragment.xml
+++ b/OsmAnd/res/layout/terrain_zoom_levels_fragment.xml
@@ -8,6 +8,7 @@
 	<net.osmand.plus.widgets.TextViewEx
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:layout_marginHorizontal="@dimen/content_padding"
 		android:layout_marginBottom="@dimen/content_padding"
 		android:text="@string/terrain_slider_description"
 		android:textColor="?android:textColorSecondary"
@@ -16,6 +17,7 @@
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:layout_marginHorizontal="@dimen/content_padding"
 		android:orientation="horizontal">
 
 		<TextView
@@ -44,6 +46,7 @@
 		android:id="@+id/zoom_slider"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:layout_marginHorizontal="@dimen/content_padding"
 		android:stepSize="1" />
 
 </LinearLayout>
