--- a/OsmAnd/res/values/no_translate.xml
+++ b/OsmAnd/res/values/no_translate.xml
@@ -20,6 +20,7 @@
     <string name="srtm_plugin_price">€2,99</string>
     <string name="sea_depth_maps_price">€1,39</string>
     <string name="osm_live">OsmAnd Live</string>
+    <string name="osmand_start">OsmAnd Start</string>
     <string name="osmand_pro">OsmAnd Pro</string>
     <string name="maps_plus">Maps+</string>
     <string name="osmand_plus">OsmAnd+</string>
