--- a/OsmAnd/res/layout/fragment_delete_backup_account.xml
+++ b/OsmAnd/res/layout/fragment_delete_backup_account.xml
@@ -24,7 +24,8 @@
 			<LinearLayout
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:orientation="vertical">
+				android:orientation="vertical"
+				android:paddingBottom="@dimen/bottom_sheet_large_list_item_height">
 
 				<LinearLayout
 					android:id="@+id/warnings_container"
@@ -144,7 +145,6 @@
 			android:background="?attr/list_background_color"
 			android:orientation="vertical"
 			android:paddingHorizontal="@dimen/content_padding"
-			android:paddingTop="@dimen/dialog_content_margin"
 			android:paddingBottom="@dimen/content_padding">
 
 			<net.osmand.plus.widgets.TextViewEx
